# Buttery-Technology-SafetyEval

./: .gitignore  DESIGN.md  DEVELOPMENT_PROGRESS_REPORT.md  DRAFT_SCORING_METHODOLOGY.md  LICENSE  LIMITATIONS.md  README.md  REQUIREMENTS.md  RESEARCH SUMMARY.md  RESULTS.md  SCORING_METHODOLOGY.md  TEST_EXECUTION_SUMMARY.md  data.json  data2.json  data_structures.py  practice.py  practice2.py  test.py  test_loading.py
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/: live_api_logs.jsonl  pyproject.toml  run_live_small_eval.py
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/data/: sample-data.json
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/realeval/: aggregate_results.py  analysis.ipynb  axis_report_summary.csv  comparison_grid.csv  evaluate_recent_harm.py  html-report.py  patch_eval.py  report.html  run_20260704_1623.jsonl  run_20260704_1801.jsonl  run_20260704_1804.jsonl  run_20260704_1915.jsonl  run_20260705_0727.jsonl  run_20260705_1630.jsonl  run_20260705_1630.jsonl.bak  run_20260706_0820.jsonl  run_final_consolidated.jsonl  run_live_multi_model_eval.py
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/safetyeval/: classifiers.py  cli.py  data_structures.py  evaluation.py  ingestion.py  nvidia_client.py  prompts.py  real_data.py  reporting.py
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/safetyeval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Buttery_Tech_Inc/safetyeval/safetyeval_pkg/tests/: test_classifiers.py  test_cli_judge.py  test_loading.py
Learn/: CODE_REFERENCE_56.md  CURRENT_LOG_wk5.6.md  MASTER_STUDY_GUIDE_wk5.6.md  PRESENTATION_ERROR_LOG_wk5.6.md  (+5 more)
(+25 files in other folders)
