[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "safetyeval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "datasets>=2.19",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["safetyeval"]

[project.scripts]
safetyeval = "safetyeval.cli:main"